<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/facultyChangepass"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_dashboard"
    tools:context=".FacultyChangePassword">

    <ImageButton
        android:id="@+id/backButtonChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profilepicture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="130dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/facultyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text=""
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilepicture" />

    <TextView
        android:id="@+id/ChangePasswordf"
        android:layout_width="182dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/FacultyChangePass"
        android:text="@string/change_password"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/facultyName"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/CurrentPasswordf"
        android:layout_width="294dp"
        android:layout_height="54dp"
        android:layout_marginTop="0dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_current_password"
        android:inputType="textPassword"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ChangePasswordf" />

    <EditText
        android:id="@+id/fctyNewPassword"
        android:layout_width="295dp"
        android:layout_height="53dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CurrentPasswordf" />

    <EditText
        android:id="@+id/ReEnterNewPasswordf"
        android:layout_width="297dp"
        android:layout_height="53dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/re_enter_new_password"
        android:inputType="textPassword"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fctyNewPassword" />

    <Button
        android:id="@+id/updatePasswordf"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="88dp"
        android:backgroundTint="@color/maroon"
        android:text="@string/update_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ReEnterNewPasswordf" />

</androidx.constraintlayout.widget.ConstraintLayout>
